--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,8 +1,8 @@
 name: Deploy website
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 on: workflow_dispatch
 jobs:
   test:
