--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,7 +2,7 @@ name: Deploy website
 on:
   push:
     branches:
-      - develop
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -32,6 +32,13 @@ jobs:
           path: |
             dist
             package.json
+      - name: Upload Artifacts Node_modules
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: |
+            .
+            !./node_modules
   deploy:
     needs: build
     runs-on: ubuntu-latest
