--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -2,7 +2,7 @@ name: Deploy website
 on:
   push:
     branches:
-      - develop
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
             dist
             package.json
       - name: Upload Artifacts Node_modules
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: my-artifact
           path: |
